--- a/style.css
+++ b/style.css
@@ -13,3 +13,10 @@ body h1 {
     margin-top: 50px;
     font-family: 'Roboto', sans-serif;
 }
+
+body h2 {
+    text-align: center;
+    margin-top: 20px;
+    font-family: 'Roboto', sans-serif;
+    color: gray;
+}
