--- a/style.scss
+++ b/style.scss
@@ -7,26 +7,155 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    header {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 10px;
+    // header {
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     text-align: center;
 
-        h1 {
-            text-align: center;
-            margin-top: 50px;
-            font-family: 'Roboto', sans-serif;
-        }
+    //     .logo {
+    //         margin-left: 10px;
+    //         margin-top: 10px;
+    //         img {
+    //             width: 75px;
+    //             height: 75px;
+    //         }
+    //     }
+
+    //     .text {
+    //         display: block;
+            
+    //         h1 {
+    //             text-align: center;
+    //             font-family: 'Roboto', sans-serif;
+    //         }
     
-        h2 {
-            text-align: center;
-            margin-top: 20px;
-            font-family: 'Roboto', sans-serif;
-            color: gray;
+    //         h2 {
+    //             text-align: center;
+    //             font-family: 'Roboto', sans-serif;
+    //             color: gray;
+    //         }
+    //     }
+
+        
+    // }
+
+    .break {
+        height: 50px;
+    }
+}
+
+/* --------------------------------- */
+/* First Nav */
+/* --------------------------------- */
+
+#firstNav {
+    background: #f8f7f7;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    border-radius: 5px;
+    transition: .3s ease all;
+    box-shadow: 10px 10px 20px rgba(170, 170, 170, .16);
+    -webkit-position: sticky;
+    position: sticky;
+    opacity: 100%;
+    margin: 8px;
+
+    body.dark & {
+        background: 222222;
+        box-shadow: 10px 10px 20px rgba(0, 0, 0, .16);
+
+        a {
+            color: #C8C8C8;
+            text-decoration: none;
+
+            &:hover {
+                color: #FEFEFE;
+            }
         }
     }
 
-    
+    .logotip {
+        cursor: pointer;
+    }
+
+    button {
+        background: transparent;
+        border: none;
+        font-size: 20px;
+        font-family: 'Roboto', sans-serif;
+        cursor: pointer;
+    }
+
+    .links {
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+        font-family: 'Roboto', sans-serif;
+        position: absolute;
+        margin-left: 70px;
+
+        a {
+            margin-right: 40px;
+            text-decoration: none;
+            color: #111111;
+            transition: .3s ease-in-out all;
+            position: relative;
+
+            i {
+                text-align: center;
+                justify-content: center;
+                align-items: center;
+                margin-left: 3px;
+            }
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+
+    .login {
+        display: flex;
+        align-items: end;
+        position: relative;
+        justify-content: right;
+        transition: .3s ease-in-out all;
+
+        &:hover {
+            a {
+                text-decoration: underline;
+            }
+
+            i {
+                color: #ACABAB;
+            }
+        }
+
+        a {
+            font-family: 'Roboto', sans-serif;
+            font-size: 20px;
+            text-decoration: none;
+            color: #000;
+            transition: .4s ease-in-out all;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+
+        i {
+            font-size: 20px;
+            margin-left: 7px;
+            margin-right: 7px;
+            cursor: pointer;
+            transition: .4s ease-in-out all;
+
+            &:hover {
+                color: #ACABAB;
+            }
+        }
+    }
 }
