Update favicon path, enhance image alt text, and adjust styles in index.html and index2.html

--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  height: 10000px;
   background-color: #f4f4f4;
+  position: relative;
 }
 body .break {
   height: 50px;
@@ -24,10 +26,11 @@ body .break {
   border-radius: 5px;
   transition: 0.3s ease all;
   box-shadow: 10px 10px 20px rgba(170, 170, 170, 0.16);
-  -webkit-position: sticky;
   position: sticky;
+  position: -webkit-sticky;
   opacity: 100%;
   margin: 8px;
+  width: 100%;
 }
 body.dark #firstNav {
   background: 222222;
