--- a/style.css
+++ b/style.css
@@ -1,112 +1,52 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  height: auto;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
   background-color: #f4f4f4;
-  position: relative;
-}
-body .break {
-  height: 50px;
 }
 
-/* --------------------------------- */
-/* First Nav */
-/* --------------------------------- */
-#firstNav {
-  background: #f8f7f7;
+body header {
+  width: 100%;
+  margin: 0;
+}
+body header nav.navbar {
+  width: 100%;
+  display: flex;
+  background-color: lightseagreen;
+  padding: 7px 5px;
+  overflow: hidden;
+  top: 0;
+  position: fixed;
+  justify-content: flex-start;
+}
+body header nav.navbar ul {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 15px 20px;
-  border-radius: 5px;
-  transition: 0.3s ease all;
-  box-shadow: 10px 10px 20px rgba(170, 170, 170, 0.16);
-  position: sticky;
-  position: -webkit-sticky;
-  opacity: 100%;
-  margin: 8px;
-  width: 100%;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
 }
-body.dark #firstNav {
-  background: 222222;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.16);
-}
-body.dark #firstNav a {
-  color: #C8C8C8;
-  text-decoration: none;
-}
-body.dark #firstNav a:hover {
-  color: #FEFEFE;
-}
-#firstNav .logotip {
+body header nav.navbar ul li {
+  list-style-type: none;
+  background-color: lightseagreen;
+  padding: 10px;
   cursor: pointer;
 }
-#firstNav button {
-  background: transparent;
-  border: none;
-  font-size: 20px;
-  font-family: "Roboto", sans-serif;
-  cursor: pointer;
+body header nav.navbar ul li:hover {
+  background-color: rgba(12, 235, 197, 0.479);
+  text-decoration: underline;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
 }
-#firstNav .links {
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  font-family: "Roboto", sans-serif;
-  position: absolute;
-  margin-left: 70px;
-}
-#firstNav .links a {
-  margin-right: 40px;
+body header nav.navbar ul li a {
   text-decoration: none;
-  color: #111111;
-  transition: 0.3s ease-in-out all;
-  position: relative;
-}
-#firstNav .links a i {
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  margin-left: 3px;
-}
-#firstNav .links a:hover {
-  text-decoration: underline;
-}
-#firstNav .login {
-  display: flex;
-  align-items: end;
-  position: relative;
-  justify-content: right;
-  transition: 0.3s ease-in-out all;
-}
-#firstNav .login:hover a {
-  text-decoration: underline;
-}
-#firstNav .login:hover i {
-  color: #ACABAB;
-}
-#firstNav .login a {
-  font-family: "Roboto", sans-serif;
-  font-size: 20px;
-  text-decoration: none;
-  color: #000;
-  transition: 0.4s ease-in-out all;
-}
-#firstNav .login a:hover {
-  text-decoration: underline;
-}
-#firstNav .login i {
-  font-size: 20px;
-  margin-left: 7px;
-  margin-right: 7px;
-  cursor: pointer;
-  transition: 0.4s ease-in-out all;
-}
-#firstNav .login i:hover {
-  color: #ACABAB;
+  color: black;
+  font-size: 18px;
 }/*# sourceMappingURL=style.css.map */
