--- a/style.scss
+++ b/style.scss
@@ -1,163 +1,54 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+}
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    height: auto;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
     background-color: #f4f4f4;
-    position: relative;
-    // header {
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     text-align: center;
-
-    //     .logo {
-    //         margin-left: 10px;
-    //         margin-top: 10px;
-    //         img {
-    //             width: 75px;
-    //             height: 75px;
-    //         }
-    //     }
-
-    //     .text {
-    //         display: block;
-            
-    //         h1 {
-    //             text-align: center;
-    //             font-family: 'Roboto', sans-serif;
-    //         }
-    
-    //         h2 {
-    //             text-align: center;
-    //             font-family: 'Roboto', sans-serif;
-    //             color: gray;
-    //         }
-    //     }
-
-        
-    // }
-
-    .break {
-        height: 50px;
-    }
 }
 
-/* --------------------------------- */
-/* First Nav */
-/* --------------------------------- */
-
-#firstNav {
-    background: #f8f7f7;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 20px;
-    border-radius: 5px;
-    transition: .3s ease all;
-    box-shadow: 10px 10px 20px rgba(170, 170, 170, .16);
-    position: sticky;
-    position: -webkit-sticky;
-    opacity: 100%;
-    margin: 8px;
+body header {
     width: 100%;
+    margin: 0;
 
-    body.dark & {
-        background: 222222;
-        box-shadow: 10px 10px 20px rgba(0, 0, 0, .16);
-
-        a {
-            color: #C8C8C8;
-            text-decoration: none;
-
-            &:hover {
-                color: #FEFEFE;
-            }
-        }
-    }
-
-    .logotip {
-        cursor: pointer;
-    }
-
-    button {
-        background: transparent;
-        border: none;
-        font-size: 20px;
-        font-family: 'Roboto', sans-serif;
-        cursor: pointer;
-    }
-
-    .links {
+    nav.navbar {
+        width: 100%;
         display: flex;
-        align-items: center;
-        font-size: 20px;
-        font-family: 'Roboto', sans-serif;
-        position: absolute;
-        margin-left: 70px;
+        background-color: lightseagreen;
+        padding: 7px 5px;
+        overflow: hidden;
+        top: 0;
+        position: fixed;
+        justify-content: flex-start;
 
-        a {
-            margin-right: 40px;
-            text-decoration: none;
-            color: #111111;
-            transition: .3s ease-in-out all;
-            position: relative;
+        ul {
+            display: flex;
+            justify-content: space-between;
+            // width: 40%;
+            min-width: fit-content;
 
-            i {
-                text-align: center;
-                justify-content: center;
-                align-items: center;
-                margin-left: 3px;
-            }
+            li {
+                list-style-type: none;
+                background-color: lightseagreen;
+                padding: 10px;
+                cursor: pointer;
 
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-    }
+                &:hover {
+                    background-color: rgba(12, 235, 197, 0.479);
+                    text-decoration: underline;
+                    min-width: fit-content;
+                }
 
-    .login {
-        display: flex;
-        align-items: end;
-        position: relative;
-        justify-content: right;
-        transition: .3s ease-in-out all;
-
-        &:hover {
-            a {
-                text-decoration: underline;
-            }
-
-            i {
-                color: #ACABAB;
-            }
-        }
-
-        a {
-            font-family: 'Roboto', sans-serif;
-            font-size: 20px;
-            text-decoration: none;
-            color: #000;
-            transition: .4s ease-in-out all;
-
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-
-        i {
-            font-size: 20px;
-            margin-left: 7px;
-            margin-right: 7px;
-            cursor: pointer;
-            transition: .4s ease-in-out all;
-
-            &:hover {
-                color: #ACABAB;
+                a {
+                    text-decoration: none;
+                    color: black;
+                    font-size: 18px;
+                }
             }
         }
     }
